--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://buzzusa.site/",   // ← यहां अपनी final URL डालें
-      "permanent": true                       // true = 308 (permanent); false = 307 (temporary)
+      "destination": "https://buzzusa.site/",   
+      "permanent": true                       
     }
   ]
 }
