--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://buzzusa.site/",   
+      "destination": "https://learnerquiz.com/news/best-private-health-insurance-plans-in-the-uk-for-families/",   
       "permanent": true                       
     }
   ]
